# LivHana-SoT

./: .claude-cheetah-learnings.md  .contextignore  .cursorignore  .cursorrules  .eslintignore  .eslintrc.json  .gitignore  .markdownlint-cli2.jsonc  .markdownlint-cli2.jsonc.ignore  .markdownlintignore  1.1.1.1_rnd_leadership_empire_cockpit_visioneering.md  1.5.1.1_finance_layer_sovereign_life_os_master_monday_edition.md  3.1.0.1_ops_leadership_numerical_index_visioneering.md  3.1.0.1_ops_strategy_numerical_index_system_visioneering.md  3.1.0.5_ops_leadership_file_classification_documentation.md  3.2.0.5_ops_operations_session_summary_documentation.md  3.3.1.7_ops_marketing_empire_cockpit_optimization_20251002.md  3.6.0.5_ops_technology_file_naming_documentation.md  3.6.0.6_ops_compliance_ship_status_monitoring.md  3.6.0.6_ops_technology_ship_status_monitoring.md  3.6.1.1_ops_technology_gcp_4layer_deployment_plan_20251003.md  3.8.1.3_ops_sop_systems_empire_cockpit_execution_20251002.md  3.8.1.3_ops_systems_empire_cockpit_execution_20251002.md  3.8.1.4_ops_sop_e2e_rollout_readiness_20251003.md  3.8.1.5_ops_sop_pci_compliance_alert_20251003.md  5 Claude Code Skills Every Vibe Coder Needs.txt  ACTUAL_RECEIPTS.md  ADR-001_Alert_Policy_Error_Rate_ENHANCED.md  ADR-002_Dashboard_Command_Center_ENHANCED.md  ADR-003_Playwright_MCP_Deterministic_CI_Pipeline.md  AGENT_DEPLOYMENT_FORENSIC_ANALYSIS_2025-10-21.md  AGENT_README.md  ALL_FIXES_VERIFIED.md  ALL_PROBLEMS_SOLVED_V2.md  BOOT_SYSTEM_COMPLETE.md  BOSS_RESPONSE_FINAL.md  BREAKING_POINTS_ANALYSIS.md  C-DIZZLE-VSI.txt  CHANGELOG.md  (+219 more)
(+40332 files in other folders)
